[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/TSCN/Header.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/TimeTable.gd" type="Script" id=2]
[ext_resource path="res://Font/SecularOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/ButtonTheme.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/ButtonPressedTheme.tres" type="StyleBox" id=5]
[ext_resource path="res://theme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/Back.tres" type="StyleBox" id=7]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 3 )

[node name="TimeTable" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="GridContainer" parent="."]
anchor_left = 0.0266667
anchor_top = 0.117188
anchor_right = 0.973333
anchor_bottom = 0.765625
mouse_filter = 2
columns = 8
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Header" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 0.078
margin_right = 0.0
margin_bottom = 0.127998
head = "School Time Table"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.107
anchor_top = 0.859
anchor_right = 0.88
anchor_bottom = 0.936
margin_left = -0.200005
margin_top = 0.383972
margin_right = -6.10352e-05
margin_bottom = -0.46405
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="HBoxContainer"]
margin_right = 229.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( -824, -464 )
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 1 )
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="HBoxContainer"]
margin_left = 233.0
margin_right = 463.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( -824, -464 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 1 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dark" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.815686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetName" type="Popup" parent="."]
visible = true
anchor_left = 0.12
anchor_top = 0.203125
anchor_right = 0.88
anchor_bottom = 0.789063
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="GetName"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GetName"]
anchor_left = 0.0701754
anchor_top = 0.773333
anchor_right = 0.929825
anchor_bottom = 0.906667
custom_constants/separation = 23
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Cancel" type="Button" parent="GetName/HBoxContainer"]
margin_right = 184.0
margin_bottom = 80.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="GetName/HBoxContainer"]
margin_left = 207.0
margin_right = 392.0
margin_bottom = 80.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GetName"]
anchor_left = 0.0526316
anchor_top = 0.08
anchor_right = 0.947368
anchor_bottom = 0.653333
margin_bottom = 3.05176e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sun" type="Control" parent="GetName/VBoxContainer"]
margin_right = 407.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="GetName/VBoxContainer/Sun"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "Sunday:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="GetName/VBoxContainer/Sun"]
anchor_left = 0.529412
anchor_right = 1.0
anchor_bottom = 0.984615
margin_left = 0.529327
margin_right = 1.0
margin_bottom = 2.28882e-05
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mon" type="Control" parent="GetName/VBoxContainer"]
margin_top = 69.0
margin_right = 407.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="GetName/VBoxContainer/Mon"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "Monday:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="GetName/VBoxContainer/Mon"]
anchor_left = 0.529412
anchor_right = 1.0
anchor_bottom = 0.984615
margin_left = -0.470673
margin_bottom = 2.01541
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tue" type="Control" parent="GetName/VBoxContainer"]
margin_top = 139.0
margin_right = 407.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="GetName/VBoxContainer/Tue"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "Tuesday:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="GetName/VBoxContainer/Tue"]
anchor_left = 0.529412
anchor_right = 1.0
anchor_bottom = 0.984615
margin_left = -0.470673
margin_bottom = 5.00002
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wed" type="Control" parent="GetName/VBoxContainer"]
margin_top = 208.0
margin_right = 407.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="GetName/VBoxContainer/Wed"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "Wednesday:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="GetName/VBoxContainer/Wed"]
anchor_left = 0.529412
anchor_right = 1.0
anchor_bottom = 0.984615
margin_left = -0.470673
margin_bottom = -0.984589
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thu" type="Control" parent="GetName/VBoxContainer"]
margin_top = 278.0
margin_right = 407.0
margin_bottom = 344.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="GetName/VBoxContainer/Thu"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "Thursday:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="GetName/VBoxContainer/Thu"]
anchor_left = 0.529412
anchor_right = 1.0
anchor_bottom = 0.984615
margin_left = -0.470673
margin_bottom = 1.01541
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="GetName/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="GetName/HBoxContainer/Done" to="." method="_on_Done_pressed"]
